diesel-builders/tests/ui_stable/primary_key_not_found_error.stderr
error: no field with column name `user_id`
 --> tests/ui_stable/primary_key_not_found_error.rs:6:22
  |
6 | #[diesel(primary_key(user_id))]
  |                      ^^^^^^^

error: Primary key column `user_id` not found in struct. `TableModel` requires a detectable primary key. Either:
       1. Add an `id` field to your struct (default primary key), or
       2. Specify primary key columns with `#[diesel(primary_key(your_column))]`
  --> tests/ui_stable/primary_key_not_found_error.rs:5:1
   |
 5 | / #[diesel(table_name = users)]
 6 | | #[diesel(primary_key(user_id))]
 7 | | pub struct User {
 8 | |     name: String,
 9 | |     email: String,
10 | | }
   | |_^
